--- a/Proyecto_final.ipynb
+++ b/Proyecto_final.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importamos la libreria <pandas> para leer la base de datos en formato .csv y la denominamos <pd>.\n",
+    "Creamos la variable <url_datos> para poder tener acceso a nuestra base de datos desde cualquier computadora sin necesidad de clonar el proyecto."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "url_datos = 'https://drive.google.com/open?id=1uB1-l6ajYHsR63JW5wDujzsBZCbEk6T2'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -18,13 +36,6 @@
    "source": [
     "print(\"Hola mundo\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
