--- a/Proyecto_final.ipynb
+++ b/Proyecto_final.ipynb
@@ -44,6 +44,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bokeh.plotting import figure, show, output_file\n",
+    "\n",
+    "output_file('vbar.html')\n",
+    "\n",
+    "p = figure(plot_width=400, plot_height=400)\n",
+    "p.vbar(x=[1, 2, 3], width=0.5, bottom=0,\n",
+    "       top=[1.2, 2.5, 3.7], color=\"firebrick\")\n",
+    "\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
