--- a/Proyecto_final.ipynb
+++ b/Proyecto_final.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Jupyter\n",
     "\n",
-    "Trabajamos con Jupyter mediante su notebook ya instalado en nuestro PC. Utilizamos el lenguaje *Python* con su version más reciente. "
+    "Trabajamos con Jupyter mediante su notebook ya instalado en nuestro PC. Utilizamos el lenguaje **Python** con su version más reciente. "
    ]
   },
   {
@@ -42,7 +42,7 @@
    "source": [
     "Creamos la variable `datos` para que se convierta en la lectura de nuestra base de datos, la cual esta en formato .csv, para ello usamos `read_csv`.\n",
     "\n",
-    "Dentro de los parentesis utilizamos funciones de *Pandas*, primeramente el archivo y despues el lenguaje.\n",
+    "Dentro de los parentesis utilizamos funciones de **Pandas**, primeramente el archivo y despues el lenguaje.\n",
     "\n",
     "Por ultimo imprimimos nuestra tabla."
    ]
@@ -1053,7 +1053,7 @@
    "source": [
     "Nuestros datos son los accidentes ocurridos en 2015 en nuestro pais, ordenados por provincia, causa, mes, clase, zona,  canton y los numeros de fallecidos, lesionados y victimas. Dichos datos fueron realizados por el Instituto Nacinonal de Estadistica y Censos. En total tenemos 35706 filas y 8 columnas.\n",
     "\n",
-    "Para poder trabajar con esta tabla necesitamos definir un nuevo _DataFrame_ que usaremos para graficar en Bokeh.\n",
+    "Para poder trabajar con esta tabla necesitamos definir un nuevo **DataFrame** que usaremos para graficar en Bokeh.\n",
     "\n",
     "* 1º Filtramos PROVINCIA = LOJA\n",
     "\n",
@@ -1944,7 +1944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Establecemos como indice de nuestro *DataFrame* a 'CAUSA' con la funcion `set_index`"
+    "Establecemos como indice de nuestro **DataFrame** a 'CAUSA' con la funcion `set_index`"
    ]
   },
   {
@@ -2404,7 +2404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos a realizar otra filtracion de datos de nuestro csv para obtener un segundo *DataFrame* con el que trabajaremos.\n",
+    "Vamos a realizar otra filtracion de datos de nuestro csv para obtener un segundo **DataFrame** con el que trabajaremos.\n",
     "* 1º Filtramos los campos PROVINCIA, CANTON, MES Y CAUSA\n",
     "* 2º Eliminamos los campos PROVINCIA, CANTON, MES Y CAUSA\n",
     "* 3º Definimos como indice el campo CLASE, dejando solo los que sean CHOQUE\n"
@@ -2659,7 +2659,7 @@
     }
    ],
    "source": [
-    "datos_final.columns"
+    "datos_final2.columns"
    ]
   },
   {
